ads-b/app-frontend/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ads-b-map
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ads-b-map
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ads-b-map
    spec:
      containers:
      - name: ads-b-map
        image: quay.io/redhatgov/ads-b-map:v0.1.6
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 8080
           protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        volumeMounts:
        - name: npm
          mountPath: /opt/app-root/src/.npm
        - name: config
          mountPath: "/opt/app-root/src/.env"
          subpath: env
          readOnly: true
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - name: npm
        emptyDir: {}
      - name: config
        configMap:
          name: config
