ads-b/app-frontend/ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ads-b-map
spec:
  to:
    kind: Service
    name: ads-b-map
  port:
    targetPort: 8080
  wildcardPolicy: None
